<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="what_do_you_want_to_remember_to_do">what do you want to remember to do</string>
    <string name="take_my_pill">Take my pill</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Satuday</string>
    <string name="sunday">Sunday</string>
    <string name="at_what_time">At what time?</string>
    <string name="set_time">Set time</string>
</resources>